Update yearly sum of energy consumption.ipynb

--- a/notebooks/yearly sum of energy consumption.ipynb
+++ b/notebooks/yearly sum of energy consumption.ipynb
@@ -122,7 +122,7 @@
     "df2= df2.groupby(pd.PeriodIndex(df2['Year'], freq=\"Y\"))['Total Consumption'].sum()\n",
     "df2.name = \"Natual Gas Usage of each Year \"\n",
     "fig = plt.figure()\n",
-    "df2.plot(kind='bar', color='b', grid=True)\n",
+    "df2.plot(kind='bar', color='r', grid=True)\n",
     "plt.legend();\n",
     "fig.set_size_inches(15,6)\n",
     "plt.show()\n",
@@ -136,7 +136,7 @@
     "df3= df3.groupby(pd.PeriodIndex(df3['Year'], freq=\"Y\"))['Total Consumption'].sum()\n",
     "df3.name = \"Solar Power Usage of each Year \"\n",
     "fig = plt.figure()\n",
-    "df3.plot(kind='bar', color='b', grid=True)\n",
+    "df3.plot(kind='bar', color='y', grid=True)\n",
     "plt.legend();\n",
     "fig.set_size_inches(15,6)\n",
     "plt.show()\n",
@@ -149,7 +149,7 @@
     "df4= df4.groupby(pd.PeriodIndex(df4['Year'], freq=\"Y\"))['Total Consumption'].sum()\n",
     "df4.name = \"District Energy Usage of each Year \"\n",
     "fig = plt.figure()\n",
-    "df4.plot(kind='bar', color='b', grid=True)\n",
+    "df4.plot(kind='bar', color='g', grid=True)\n",
     "plt.legend();\n",
     "fig.set_size_inches(15,6)\n",
     "plt.show()\n",
