--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "46a54106",
    "metadata": {},
    "source": [
     "# Corporate Energy CONSUMPTION – Open Calgary\n",
@@ -12,6 +13,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83de8153",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -19,6 +21,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd46633d",
    "metadata": {},
    "source": [
     "Calgary has long been known as an energy city and is being recognized as a leader in the global energy transition. The weather in Calgary is slowly changing due to global warming. In 2021, for the first time in history, total electricity use hit a record high as a result of an increase in air conditioning use in the summer. Calgary typically peaks in energy use in winter, but that's likely to change now. When the temperature rises due to climate change, it is predicted that the use of energy for cooling will increase, which will result in more greenhouse gas emissions, which will lead to a vicious cycle of raising the temperature again. Currently, about 84% of greenhouse gases that cause climate change are generated in the process of using energy, so it is necessary to study where a lot of energy is generated in order to prevent climate warming. We aim to analyze and show energy use of facilities and infrastructure components on a monthly or yearly basis with an open dataset containing electricity, natural gas, solar power provided by the city.  "
@@ -26,6 +29,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a9b988b",
    "metadata": {},
    "source": [
     "#### Calgary Tempurature fluctation for years\n",
@@ -42,6 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "b2c77f84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "a2a262f7",
    "metadata": {},
    "outputs": [
     {
@@ -506,6 +512,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2f2a2dc6",
    "metadata": {},
    "source": [
     "## Guiding Questions"
@@ -513,6 +520,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0190660a",
    "metadata": {},
    "source": [
     "### 1. What is the recent trend of year-on-year energy consumption in the city?\n",
@@ -522,12 +530,13 @@
     "- Solar Power Energy\n",
     "- Solar Thermal Energy\n",
     "\n",
-    "Also the units were first converted from kwh to GJ in order to observe statistics on the same unit of energy consumption. After data wrangling we found maximum consumption of out of the above said three sources and found the Natural Gas being as the highest source of fuel to produce electricity."
+    "Also the units were first converted from kwh to GJ in order to observe statistics on the same unit of energy consumption. After data wrangling we found maximum consumption out of the above said three resources of energy and found that the Natural Gas is the highest source of fuel to produce energy."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "6923e13f",
    "metadata": {},
    "outputs": [
     {
@@ -578,6 +587,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2d0d79b",
    "metadata": {},
    "source": [
     "### Maximum consumption years"
@@ -586,6 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "eb52d364",
    "metadata": {},
    "outputs": [
     {
@@ -612,13 +623,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9b96c45",
    "metadata": {},
    "source": [
-    "From the results we found that the maximum energy is consumed in the year 2021 is produced from Natural gas. This was also the highest ever production of electricity to date from this non-renewable resource. Furthermore we analysed that the maximum electricity produced from solar power was in 2020 at 2882.6 GJ while from solar thermal it was back in 2014 where the energy production stood at 248 GJ."
+    "From the results we found that the maximum energy is consumed in the year 2021 is produced from Natural gas. This was also the highest ever energy consumption to date from this non-renewable resource. Furthermore we analysed that the maximum energy consumption from solar power was in 2020 at 2882.6 GJ while from solar thermal it was back in 2014 where the energy production stood at 248 GJ."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7de86170",
    "metadata": {},
    "source": [
     "### Energy consumption using Natural Gas"
@@ -627,6 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "a3cf404f",
    "metadata": {},
    "outputs": [
     {
@@ -864,13 +878,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aca0644b",
    "metadata": {},
    "source": [
-    "From the data obtained for the consumption of Natural Gas to produce electricity we found that a total of 33472 different addresses having different facilities and business units are dependent on the non renewable resource to power there corporate offices in Calgary. Overall, there is a huge amount of reliability on Natural Gas."
+    "From the data obtained for the consumption of Natural Gas to produce energy we found that a total of 33472 different addresses having different facilities and business units are dependent on the non renewable resource to power there corporate offices in Calgary. Overall, there is a huge amount of reliability on Natural Gas."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "3ade0855",
    "metadata": {},
    "source": [
     "### Energy consumption using Solar power"
@@ -879,6 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "dc4a79c9",
    "metadata": {},
    "outputs": [
     {
@@ -1116,13 +1133,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6d9e86e",
    "metadata": {},
    "source": [
-    "From the data obtained for the consumption of Solar Power to produce electricity we found that a total of 1090 different addresses having different facilities and business units are dependent on solar power to provide electricity to there corporate offices in Calgary. Overall, this is not as huge in comparison to the amount of reliance we have on Natural Gas."
+    "From the data obtained for the consumption of Solar Power to produce energy we found that a total of 1090 different addresses having different facilities and business units are dependent on solar power to provide energy to there corporate offices in Calgary. Overall, this is not as huge in comparison to the amount of reliance we have on Natural Gas."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "58d808eb",
    "metadata": {},
    "source": [
     "### Energy consumption using Solar thermal"
@@ -1131,6 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "6251ab92",
    "metadata": {},
    "outputs": [
     {
@@ -1368,13 +1388,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2f99da24",
    "metadata": {},
    "source": [
-    "From the data obtained for the consumption of Solar Thermal Energy to produce electricity we found that a total of only 67 different addresses with business unit naming Facility Management are soley dependent on solar thermal power to provide electricity to there corporate offices in Calgary. Overall, this is not anywhere near to the amount of reliance we have on Natural Gas or Solar Power."
+    "From the data obtained for the consumption of Solar Thermal Energy to produce energy we found that a total of only 67 different addresses with business unit naming Facility Management are soley dependent on solar thermal power to provide energy to there corporate offices in Calgary. Overall, this is not anywhere near to the amount of reliance we have on Natural Gas or Solar Power."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "32b0d8ab",
    "metadata": {},
    "source": [
     "### Line plot to compare Total Energy Consumption using,\n",
@@ -1386,7 +1408,10 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "id": "9f81491f",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1412,19 +1437,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e6e62ba",
    "metadata": {},
    "source": [
     "## Year-on-year energy consumption in Calgary\n",
     "\n",
     "From the line plot we can clearly understand the dependency of energy produced from Natural gas for the city of Calgary. Here the graph shown depicts the mean value(bold line) over the years with a confidence interval(shaded area) of 95% over the years 2014 to 2021. This plot gives us a better idea on the mean energy consumption with the total accuracy of 95% for each the the resource and the total energy consumed.\n",
     "\n",
-    "Here the mean production of electricity from natural gas is almost constant. The mean production of electricity from solar power has seen a growth over the years from 2014 to 2020, while there is a decline for the year 2021 but it might be due to non-availability of full data yet for the year 2021. Hence overall we can conclude that the electricity produced from solar power is increasing each year. But the same can not be said for the electricity produced from solar thermal. Over the years from 2014 to 2019 there is a downward trend for the energy consumption from this resource. While we do not have any data available for the year 2020 and 2021.\n",
+    "Here the mean production of energy from natural gas is almost constant. The mean production of energy from solar power has seen a growth over the years from 2014 to 2020, while there is a decline for the year 2021 but it might be due to non-availability of full data yet for the year 2021. Hence overall we can conclude that the total energy produced from solar power is increasing each year. But the same can not be said for the energy produced from solar thermal. Over the years from 2014 to 2019 there is a downward trend for the energy consumption from this resource. While we do not have any data available for the year 2020 and 2021.\n",
     "\n",
     "We can also say that since 2019 energy consumption from solar power saw the highest growth because of the highest slope seen in the line plot."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "1ffe6773",
    "metadata": {},
    "source": [
     "### Pair Plot for Natural Gas"
@@ -1433,6 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "19c1bda3",
    "metadata": {},
    "outputs": [
     {
@@ -1452,6 +1480,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c8edd838",
    "metadata": {},
    "source": [
     "### Pair Plot for Solar Power"
@@ -1460,6 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "4682c5ec",
    "metadata": {},
    "outputs": [
     {
@@ -1479,6 +1509,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b0c6bcc",
    "metadata": {},
    "source": [
     "### Pair Plot for Solar Thermal Energy"
@@ -1487,6 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "6a274854",
    "metadata": {},
    "outputs": [
     {
@@ -1506,6 +1538,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31d15882",
    "metadata": {},
    "source": [
     "### Total consumption of Natural gas year-on-year "
@@ -1514,6 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "6fcbd09b",
    "metadata": {},
    "outputs": [
     {
@@ -1533,6 +1567,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25ddda36",
    "metadata": {},
    "source": [
     "### Total consumption of Solar Power year-on-year "
@@ -1541,6 +1576,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "abf4aa42",
    "metadata": {},
    "outputs": [
     {
@@ -1560,6 +1596,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e6f2d80a",
    "metadata": {},
    "source": [
     "### Total consumption of Solar Thermal Energy year-on-year "
@@ -1568,6 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "f0ec58d9",
    "metadata": {},
    "outputs": [
     {
@@ -1587,6 +1625,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5e1c374b",
    "metadata": {},
    "source": [
     "### 2. What’s the distribution of the energy production i.e., how much energy is being produced from renewable resources like solar and non-renewable resources like natural gas?\n",
@@ -1597,6 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "bc3208d7",
    "metadata": {},
    "outputs": [
     {
@@ -3713,6 +3753,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "282f6c1c",
    "metadata": {},
    "source": [
     "#### Top 10 Facilities using Non Renewable Energy or Renewable Energy"
@@ -3721,6 +3762,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
+   "id": "a904c4e2",
    "metadata": {},
    "outputs": [
     {
@@ -4174,6 +4216,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "447612da",
    "metadata": {},
    "source": [
     "#### Top 10 Business Units using Non Renewable Energy or Renewable Energy"
@@ -4182,6 +4225,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
+   "id": "79071c48",
    "metadata": {},
    "outputs": [
     {
@@ -4370,6 +4414,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07a674a4",
    "metadata": {},
    "source": [
     "### 3. In the end we will sum up different corporates and facilities energy consumption trends over the year and what’s their main source of resource of energy?\n",
@@ -4382,6 +4427,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
+   "id": "4c71f6ce",
    "metadata": {},
    "outputs": [
     {
@@ -4412,6 +4458,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "590834bf",
    "metadata": {},
    "source": [
     "### Electricity Yearly Usage of each primary facility "
@@ -4420,6 +4467,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
+   "id": "a91e5a7a",
    "metadata": {},
    "outputs": [
     {
@@ -6194,6 +6242,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c40d0fb",
    "metadata": {},
    "source": [
     "From the data shows that all of the primary facilities in Calgary have decreased use the electricity from 2014 to 2021. \n",
@@ -6203,6 +6252,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "59b4c163",
    "metadata": {},
    "source": [
     "### Natural Gas Yearly Usage of each primary facility"
@@ -6211,6 +6261,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
+   "id": "bf349949",
    "metadata": {},
    "outputs": [
     {
@@ -8682,6 +8733,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c86ab1b8",
    "metadata": {},
    "source": [
     "From the data shows that all of the primary facilities in Calgary have decreased use the Natural Gas from 2014 to 2021. \n",
@@ -8691,6 +8743,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c730a60",
    "metadata": {},
    "source": [
     "### Solar Power Yearly Usage of each primary facility"
@@ -8699,6 +8752,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
+   "id": "e33163f4",
    "metadata": {},
    "outputs": [
     {
@@ -11382,6 +11436,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b24eee5",
    "metadata": {},
    "source": [
     "From the data shows that all of the primary facilities in Calgary have decreased use the Solar Power from 2017 to 2021.\n",
@@ -11392,6 +11447,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "878e4a4f",
    "metadata": {},
    "source": [
     "The primary facilities in City of Calgary energy consumption trends over the year is that they tried to use less energy consumption.\n",
@@ -11400,6 +11456,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92864c62",
    "metadata": {},
    "source": [
     "# Conclusion"
@@ -11408,6 +11465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d402ad2d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11415,7 +11473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -11429,7 +11487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
