--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -1407,6 +1407,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "93a28693",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relative energy sonsumption from solar power in 2021 w.r.t. 2020= 0.53\n"
+     ]
+    }
+   ],
+   "source": [
+    "solarEnergyConsumption_2021 = solarEnergyConsumption[solarEnergyConsumption['Year']==2021]['Total Consumption'].sum(axis = 0, skipna = True)\n",
+    "solarEnergyConsumption_2020 = solarEnergyConsumption[solarEnergyConsumption['Year']==2020]['Total Consumption'].sum(axis = 0, skipna = True)\n",
+    "print(\"Relative energy sonsumption from solar power in 2021 w.r.t. 2020=\", round(solarEnergyConsumption_2021/solarEnergyConsumption_2020, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68926018",
+   "metadata": {},
+   "source": [
+    "#### Assumption\n",
+    "\n",
+    "More then half of the energy consumed in 2020 from solar power has been consumed already in 2021 till the month of August. Hence we might assume that till the end of 2021 it could cross 2020's energy consumption."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "id": "9f81491f",
    "metadata": {
@@ -1446,7 +1476,7 @@
     "\n",
     "Here the mean production of energy from natural gas is almost constant. The mean production of energy from solar power has seen a growth over the years from 2014 to 2020, while there is a decline for the year 2021 but it might be due to non-availability of full data yet for the year 2021. Hence overall we can conclude that the total energy produced from solar power is increasing each year. But the same can not be said for the energy produced from solar thermal. Over the years from 2014 to 2019 there is a downward trend for the energy consumption from this resource. While we do not have any data available for the year 2020 and 2021.\n",
     "\n",
-    "We can also say that since 2019 energy consumption from solar power saw the highest growth because of the highest slope seen in the line plot."
+    "We can also assume that since 2019 energy consumption from solar power saw the highest growth because of the highest slope seen in the line plot and the same trend could repeat by the end of 2021 if our assumption made above are correct."
    ]
   },
   {
