--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -5735,7 +5735,7 @@
     "#fig = px.bar(grouped_renewable_bizunit, x='Business Unit Desc', y='Total Consumption')\n",
     "fig.update_layout(\n",
     "    title=\"Energy produced from non renewable resources\",\n",
-    "    xaxis_title=\"Years\",\n",
+    "    xaxis_title=\"Business Unit\",\n",
     "    yaxis_title=\"Total Non Renewable Consumption\",\n",
     "    font=dict(\n",
     "        size=15,\n",
@@ -5747,7 +5747,7 @@
     "fig = px.bar(grouped_renewable_bizunit, x='Business Unit Desc', y='Total Consumption')\n",
     "fig.update_layout(\n",
     "    title=\"Energy produced from non renewable resources\",\n",
-    "    xaxis_title=\"Years\",\n",
+    "    xaxis_title=\"Business Unit\",\n",
     "    yaxis_title=\"Total Non Renewable Consumption\",\n",
     "    font=dict(\n",
     "        size=15,\n",
