Update Corporate Energy Consumption.ipynb

--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -5746,7 +5746,7 @@
     "\n",
     "fig = px.bar(grouped_renewable_bizunit, x='Business Unit Desc', y='Total Consumption')\n",
     "fig.update_layout(\n",
-    "    title=\"Energy produced from non renewable resources\",\n",
+    "    title=\"Energy produced from renewable resources\",\n",
     "    xaxis_title=\"Business Unit\",\n",
     "    yaxis_title=\"Total Non Renewable Consumption\",\n",
     "    font=dict(\n",
