--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -4238,6 +4238,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b6841fc",
+   "metadata": {},
+   "source": [
+    "Looking at the graph below, water service uses the most energy among renewable energy, and waste recycling business uses the most energy among renewable energy. Water service, facility management, water servce, and calgary tranist businesses use non-renewable energy and produce renewable energy at the same time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 115,
    "id": "bc3208d7",
@@ -6187,7 +6195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 117,
    "id": "a91e5a7a",
    "metadata": {},
    "outputs": [
