--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -39,7 +39,7 @@
     "- Daily minimun temperature is the coldest temperature in a day. \n",
     "- Daily avearage temperature is the average of the maxium temparature and minium temperature in a day\n",
     "\n",
-    "Before analyzing the energy consumption, let me explain the temperature change over the past 100 years.\n",
+    "Before analyzing the energy consumption, let us explain the temperature change over the past decades.\n",
     "The graph made through open data shows the average values of the hottest and coldest temperatures from 1948 to 2020 as shown below. Annual averages are also shown. The average annual temperature has risen by about 1.9 degrees. Based on the highest temperature per day in June, July, and August, the hottest months of the year, the difference in annual average values does not show much difference from 1948 to 2020. However, if you look at the difference in the average value every year based on the lowest temperature in one day, the temperature has risen since 2000. Also, looking at the graph comparing the lowest and highest average monthly temperatures for 2000, 2010, and 2020, the temperature in November and December in 2020 is about -4 degrees higher than in 2000 and 2010. In the case of July and August, the hot period is distributed for a long time."
    ]
   },
@@ -1694,7 +1694,7 @@
    "source": [
     "### 2. What’s the distribution of the energy production i.e., how much energy is being produced from renewable resources like solar and non-renewable resources like natural gas?\n",
     "\n",
-    "We can know how much energy is produced based on the energy consumption rate. Let's look at renewable energy and non-renewable energy separately in the given data set. And since electricity is provided to Alberta and produced using non-renewable energy, electricity will be included in the non-renewable energy category."
+    "We can know how much energy is produced based on the energy consumption rate. Let's look at renewable energy and non-renewable energy separately in the given data set. Since electricity is provided to Alberta and produced using non-renewable energy such as Natural gas, electricity will be included in the non-renewable energy category."
    ]
   },
   {
@@ -1710,7 +1710,7 @@
    "id": "7b6841fc",
    "metadata": {},
    "source": [
-    "If you look at the table below, non-renewable energy is still the main energy used by business units from 2014 to 2021. However, the consumption or production of renewable energy is increasing every year. "
+    "If you look at the table below, non-renewable energy is still the main energy consumed by business units from 2014 to 2021. However, the consumption or production of renewable energy is increasing every year. "
    ]
   },
   {
@@ -3977,12 +3977,12 @@
    "id": "78858ce4",
    "metadata": {},
    "source": [
-    "We can also see how much energy is produced by comparing business units that consume renewable and non-renewable energy. The following tables and graphs analyzes the top 10 business units that consume non-renewable energy and the top 10 businesses that consume or produce renewable energy."
+    "We can also see how much energy is produced by comparing business units that consume renewable and non-renewable energy. The following tables and graphs analyzes the top 10 business units that consume non-renewable energy and the top 10 businesses that consume or produce renewable energy. However, only 5 business units using renewable energy are producing and consuming renewable energy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 119,
    "id": "79071c48",
    "metadata": {},
    "outputs": [
@@ -4084,6 +4084,76 @@
        "      <td>4875768</td>\n",
        "      <td>5.082011e+05</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Roads</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>183575</td>\n",
+       "      <td>3.636990e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Calgary Parking Auth</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>1563370</td>\n",
+       "      <td>3.287160e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Real Estate and Dev Serv</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>3289586</td>\n",
+       "      <td>3.075200e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Waste - Recycling Services</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>8095477</td>\n",
+       "      <td>2.737251e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Calgary Parking Auth</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>4702346</td>\n",
+       "      <td>1.882729e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Calgary Parks</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>59881773</td>\n",
+       "      <td>1.285224e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Real Estate and Dev Serv</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>4996357</td>\n",
+       "      <td>1.254142e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Calgary Parks</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>2652797</td>\n",
+       "      <td>1.058750e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Water Resources</td>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>8848072</td>\n",
+       "      <td>5.646867e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Water Resources</td>\n",
+       "      <td>Natural Gas</td>\n",
+       "      <td>183575</td>\n",
+       "      <td>5.220000e+04</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -4099,7 +4169,17 @@
        "24                       Roads        Electricity   6562761       1.968599e+06\n",
        "1                CPS - Bureaus        Natural Gas   4960643       7.187340e+05\n",
        "30  Waste - Recycling Services        Natural Gas   2630732       5.587590e+05\n",
-       "0                CPS - Bureaus        Electricity   4875768       5.082011e+05"
+       "0                CPS - Bureaus        Electricity   4875768       5.082011e+05\n",
+       "25                       Roads        Natural Gas    183575       3.636990e+05\n",
+       "9         Calgary Parking Auth        Natural Gas   1563370       3.287160e+05\n",
+       "23    Real Estate and Dev Serv        Natural Gas   3289586       3.075200e+05\n",
+       "29  Waste - Recycling Services        Electricity   8095477       2.737251e+05\n",
+       "8         Calgary Parking Auth        Electricity   4702346       1.882729e+05\n",
+       "10               Calgary Parks        Electricity  59881773       1.285224e+05\n",
+       "22    Real Estate and Dev Serv        Electricity   4996357       1.254142e+05\n",
+       "11               Calgary Parks        Natural Gas   2652797       1.058750e+05\n",
+       "31             Water Resources        Electricity   8848072       5.646867e+04\n",
+       "32             Water Resources        Natural Gas    183575       5.220000e+04"
       ]
      },
      "metadata": {},
@@ -4242,12 +4322,12 @@
    "id": "7b6841fc",
    "metadata": {},
    "source": [
-    "Looking at the graph below, water service uses the most energy among renewable energy, and waste recycling business uses the most energy among renewable energy. Water service, facility management, water servce, and calgary tranist businesses use non-renewable energy and produce renewable energy at the same time."
+    "Looking at the graph below, water service uses the most energy among renewable energy, and waste recycling business uses the most energy among renewable energy. Water service, facility management, water servce, and calgary tranist businesses use non-renewable energy and produce renewable energy at the same time. Most other units consume only non-renewable energy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 120,
    "id": "bc3208d7",
    "metadata": {},
    "outputs": [
@@ -4279,7 +4359,12 @@
           "Calgary Transit",
           "Facility Management",
           "Roads",
-          "CPS - Bureaus"
+          "CPS - Bureaus",
+          "Waste - Recycling Services",
+          "Calgary Parking Auth",
+          "Calgary Parks",
+          "Real Estate and Dev Serv",
+          "Water Resources"
          ],
          "xaxis": "x",
          "y": [
@@ -4287,7 +4372,12 @@
           3136269.0852,
           1980460.8828,
           1968599.3832,
-          508201.1424
+          508201.1424,
+          273725.136,
+          188272.8684,
+          128522.4228,
+          125414.19,
+          56468.6748
          ],
          "yaxis": "y"
         },
@@ -4312,7 +4402,12 @@
           "Water Services",
           "Calgary Transit",
           "CPS - Bureaus",
-          "Waste - Recycling Services"
+          "Waste - Recycling Services",
+          "Roads",
+          "Calgary Parking Auth",
+          "Real Estate and Dev Serv",
+          "Calgary Parks",
+          "Water Resources"
          ],
          "xaxis": "x",
          "y": [
@@ -4320,7 +4415,12 @@
           3925488,
           3428525,
           718734,
-          558759
+          558759,
+          363699,
+          328716,
+          307520,
+          105875,
+          52200
          ],
          "yaxis": "y"
         }
