Update Corporate Energy Consumption.ipynb

--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -6252,7 +6252,7 @@
     "\n",
     "Alberta has energy resources including crude oil & gas, coal, renewable energy, natural gas, and more, so\n",
     "we calculated that what is the main source of resource of energy in each primary Facility in City of Calgary base on 3 main primary energies which are Electricity, Natural Gas, and Solar Power.\n",
-    "As we mention that,  the units were first converted from kWh to GJ in order to observe statistics on the same unit of energy consumption."
+    "Since we will show the number for indivisual resource, we will use a origianl unit for this question."
    ]
   },
   {
