--- a/notebooks/Corporate Energy Consumption.ipynb
+++ b/notebooks/Corporate Energy Consumption.ipynb
@@ -4328,7 +4328,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "bc3208d7",
+   "id": "c042795c",
    "metadata": {},
    "outputs": [
     {
@@ -13060,14 +13060,11 @@
    "id": "2beb4aa7",
    "metadata": {},
    "source": [
-    "Conclusion"
+    "Overall, we can conclude that the corporate facilities in Calgary ar highly dependent on Natural gas as their energy resource. If we try to compare it with other sources like solar power or solar thermal, we find that these two hardly accounts for 5%-10% of the total energy consumption each year.  \n",
+    "But on the positive note there have been a gradual increase in use of solar power every year while the graph of natural gas has remained saturated in the past few years. \n",
+    "\n",
+    "Also, the primary facilities in city of Calgary over the past years have shown a trend to consume less energy determining that these facilities are taking energy conservation steps to promote clearner environment and are moving towards clean technologies like solar power through investing and increasing energy efficiency."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a769b845",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
